# FiveKnights

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Test.out  build-linux.sh  build-unix.sh  build-windows.bat  compile.sh  formatAll.sh
Docs/: Game.md  Senpai.md  UsedProgamingConcepts.md
Game/: CMakeLists.txt  main.cpp
Game/src/: ChessComputer.h++  base.h++  game.h++  loadingScene.h++  main.c++  mainMenu.h++
Senpai/: CMakeLists.txt  fetch-lib-unix.sh  fetch-lib-windows.bat
Senpai/SDL/: build.sh
Senpai/include/: Senpai  Senpai.h++
Senpai/include/assets/: Animation.h++  Assets.h++  Audio.h++  Font.h++  Texture.h++  TileSet.h++
Senpai/include/components/: Common.h++  CommonComponents.h++  Components.h++  Graphics.h++  GraphicsComponents.h++  Physics.h++  PhysicsComponents.h++
Senpai/include/core/: Asset.h++  Base.h++  Core.h++  ECS.h++  Event.h++  FileReader.h++  Graphics.h++  Inputs.h++  Keys.h++  RNG.h++  Settings.h++  Thread.h++  Time.h++  TypeId.h++  pch.h
Senpai/include/core/Container/: Range.h++
Senpai/include/core/container/: Geometry.h++  Matrix.h++  Range.h++  Vec2.h++  Vector.h++
Senpai/include/core/scene/: Asset.h++  Component.h++  ECRegistry.h++  ECS.h++  ECSBase.h++  Entity.h++  Scene.h++  Script.h++  System.h++
Senpai/include/events/: Events.h++  System.h++  SystemEvents.h++
Senpai/include/sdl/: SDLBackend.h++
Senpai/include/systems/: CommonSystems.h++  Graphics.h++  GraphicsSystems.h++  Physics.h++  PhysicsSystems.h++  Systems.h++  TestSystem.h++
Senpai/src/: Assets.c++  Components.c++  SDLBackend.c++  Senpai.c++  Systems.c++
Senpai/src/core/: Asset.c++  Base.c++  ECS.c++  Graphics.c++  Inputs.c++  RNG.c++  Time.c++
Senpai/src/core/Container/: Range.c++
Senpai/src/core/scene/: Component.c++  ECS.c++
scripts/: build-unix-realese.sh  build-windows-realease.bat  create_deb.jl  create_simple_installer.jl  formatAll.sh  run.sh
tests/: Tests.c++  test.cpp  tests.cpp
tests/Game-Tests/: Test-ChessComputer.h++
tests/Senpai-Tests/: Containers.h++
